feat(update): add more stuff and implement tests
